--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "relay/relay": "^2.1",
     "middlewares/fast-route": "^2.0",
     "middlewares/request-handler": "^2.0",
-    "laminas/laminas-diactoros": "^2.11"
+    "laminas/laminas-diactoros": "^2.11",
+    "narrowspark/http-emitter": "^2.0"
   },
   "autoload": {
     "psr-4": {
